changes in index file and created new file

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="info-box">
                     <i class='bx bxs-envelope'></i>
-                    <span>archana.dearth1513@gmail.com</span>
+                    <span>archana@gmail.com</span>
                 </div>
             </div>
             <a href="#" class="btn">Download CV</a>
